<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">League Of Forca</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nada"></string>
    <string name="tentar">Tentar</string>
    <string name="entrecomaletra">Letra</string>
    <string name="a">A</string>
    <string name="imageviewdesc">forca</string>
    <string name="letrasjaforam">Letras já usadas:</string>
    <string name="tentarpalavra">Tentar Palavra</string>
    <string name="palavra">Palavra</string>
    <string name="score">Score:</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_hall__of__fame">Hall_Of_Fame</string>
    <string name="title_activity_pego__nome__jogador">Pego_Nome_Jogador</string>
    <string name="btnVoltarMenu">Voltar para o menu</string>

</resources>